src/App.css
/*COLOR PALETTE
PRIMARY BROWN: #8D6E63;
SECONDARY TEAL: #009688;
*/

/*HEAD*/
.header-container {
  z-index: 5;
  position: fixed;
  top: 0px;
  left: 0px;
  display: inline-block;
  width: 100%;
  background-color: #EEEEEE !important;
  min-width: 350px;
}

.header-subcontainer {
  display: flex;
}

.header-subcontainer p {
  margin-left: 1rem;
  font-family: 'Open Sans', sans-serif;
  font-size: 1.5rem;
  font-weight: lighter;
  color: #9E9E9E;
}

.header-edit-icon {
  opacity: 0;
  color: #757575 !important;
  cursor: pointer;
}

.header-edit-dialog {
  text-align: center;
}

.header-subcontainer p:hover .header-edit-icon {
  opacity: 1;
}

.header-trackcontrol {
  align-content: center;
  text-align: left !important;
  margin: 0.5rem auto 0rem auto;
  padding: 0rem 0rem 0rem 0rem;
  height: 3.5rem;
}

.header-trackcontrol-icon {
  transform: translateY(0.7rem);
  color: #757575 !important;
  font-size: 250% !important;
}

.header-trackcontrol-icon:hover {
  color: #5D4037 !important;
  cursor: pointer;
}

.header-trackcontrol-icon:active {
  color: #BCAAA4 !important;
}

.header-avatar {
  transform: translateY(-15px);
}

.badge {
  transform: translateY(10px);
  padding-bottom: 0px !important;
  padding-left: 0px !important;
}

.badge span {
  top: 10px !important;
  right: 20px !important;
  width: 12px !important;
  height: 12px !important;
}

.online span {
  background-color: #76FF03 !important;
}

.offline span {
  background-color: #D50000 !important;
}

.header-bottombar {
  align-items: flex-end;
  display: flex;
  height: 1rem;
}

.header-addtrack-input {
  margin: 0rem 1rem 0rem 1rem;
  min-width: 14rem;
  transform: translateY(0.5rem);
}

#header-addtrack-input::placeholder {
  font-size: 12px !important;
  font-family: 'Open Sans', sans-serif;
}

.header-track-measure {
  border-top-left-radius: 1rem !important;
  /*margin-left: 16rem;*/
  width: 100%;
  height: 2rem;
  background-color: #E0E0E0;
  overflow: hidden;
}

.header-track-measure, .measure-cell, .floating-seek-icon {
  cursor: default;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
}

.measure-cell {
  box-sizing: border-box;
  font-size: 0.8rem;
  padding-left: 5px;
  color: #BCAAA4;
  border-right: 1px solid #BCAAA4;
  width: 40px;
  height: 100%;
  display: inline-block;
}

.thick {
  border-right: 2px solid #A1887F;
}

#measureBarSub {
    overflow-x: scroll;
    overflow-y: hidden;
    height: 100%;
    position: relative;
    white-space: nowrap;
}

/*BODY*/
.body-padding {
  height: 6.5rem;
  width: 100%;
}

.body-container {
  height: 100%;
  width: 100%;
}

.button-addtrack {
  position: fixed;
  bottom: 2rem;
  right: 2rem;
}

.floating-seek-icon {
  z-index: 9;
  color: #5D4037 !important;
  font-size: 50px !important;
  background-color: rgba(255, 255, 255, 0) !important;
  position: absolute;
  left: 14.5rem;
  transition: none !important;
  top: 4.1rem !important;
}

.floating-seek-bar {
  z-index: 2;
  box-sizing: border-box;
  position: fixed;
  width: 2px;
  height: 100%;
  left: 16rem;
  background-color: #5D4037;
}

#markerhead {
  color: #79BED9 !important;
}

